--- a/buildingGoogleHome.html
+++ b/buildingGoogleHome.html
@@ -1,3 +1,3 @@
-<img src="google.png">
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/77/Google_Images_2015_logo.svg/2560px-Google_Images_2015_logo.svg.png">
 <input type="text" placeholder="">
 <button>Google Search</button> <button>I'm Feeling Lucky</button>
