--- a/applyanchor.html
+++ b/applyanchor.html
@@ -3,4 +3,4 @@
 <p>I built this as part of my scrimba's HTML&CSS course</p>
 <p>check out my live demo <a href="https://www.google.com/" target="_blank">here</a>
 </p>
-<p>back to my home page <a href="https://www.github.com/">here</a></p>
+<p>back to my home page <a href="https://www.github.com/" target="_blank">here</a></p>
